// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LetterAvatar color should return a color based on email 1`] = `
<div>
  <svg
    class="css-h0a6ia-LetterAvatar-imageStyle ewkzefl0"
    viewBox="0 0 120 120"
  >
    <rect
      fill="#4e3fb4"
      height="120"
      opacity="100%"
      rx="15"
      ry="15"
      width="120"
      x="0"
      y="0"
    />
    <text
      fill="#FFFFFF"
      font-size="65"
      style="dominant-baseline: central;"
      text-anchor="middle"
      x="50%"
      y="50%"
    >
      JB
    </text>
  </svg>
</div>
`;

exports[`LetterAvatar color should return a color based on id 1`] = `
<div>
  <svg
    class="css-h0a6ia-LetterAvatar-imageStyle ewkzefl0"
    viewBox="0 0 120 120"
  >
    <rect
      fill="#57be8c"
      height="120"
      opacity="100%"
      rx="15"
      ry="15"
      width="120"
      x="0"
      y="0"
    />
    <text
      fill="#FFFFFF"
      font-size="65"
      style="dominant-baseline: central;"
      text-anchor="middle"
      x="50%"
      y="50%"
    >
      ?
    </text>
  </svg>
</div>
`;

exports[`LetterAvatar color should return a color based on ip address 1`] = `
<div>
  <svg
    class="css-h0a6ia-LetterAvatar-imageStyle ewkzefl0"
    viewBox="0 0 120 120"
  >
    <rect
      fill="#ec5e44"
      height="120"
      opacity="100%"
      rx="15"
      ry="15"
      width="120"
      x="0"
      y="0"
    />
    <text
      fill="#FFFFFF"
      font-size="65"
      style="dominant-baseline: central;"
      text-anchor="middle"
      x="50%"
      y="50%"
    >
      ?
    </text>
  </svg>
</div>
`;

exports[`LetterAvatar color should return a color based on username 1`] = `
<div>
  <svg
    class="css-h0a6ia-LetterAvatar-imageStyle ewkzefl0"
    viewBox="0 0 120 120"
  >
    <rect
      fill="#315cac"
      height="120"
      opacity="100%"
      rx="15"
      ry="15"
      width="120"
      x="0"
      y="0"
    />
    <text
      fill="#FFFFFF"
      font-size="65"
      style="dominant-baseline: central;"
      text-anchor="middle"
      x="50%"
      y="50%"
    >
      F
    </text>
  </svg>
</div>
`;
